--- a/view_pros.html
+++ b/view_pros.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<form action="/action_page.php">
+<form>
  
 
   <div class="container">
@@ -21,13 +21,9 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
 
     <button type="submit">Login</button>
-    <input type="checkbox" checked="checked"> Remember me
+    <span class="psw" style="background-color:#f1f1f1">Forgot <a href="#">password?</a></span>
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
 </form>
 
 </div>
