--- a/view_pros.html
+++ b/view_pros.html
@@ -20,7 +20,7 @@
     <label><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <button type="submit">Login</button><!--a-->
+    <button type="submit">Login</button>
     <span class="psw" style="background-color:#f1f1f1">Forgot <a href="#">password?</a></span>
   </div>
 
