--- a/view_pros.html
+++ b/view_pros.html
@@ -18,7 +18,7 @@
 
     <!-- bootstrap default navbar layout -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">ProsProject</a>
+      <a class="navbar-brand" href="#">Welcome to ezTrips!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
